--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Login">
-  <ion-content class="padding" id="login--wrapper">
+  <div class="padding" id="login--wrapper">
     <div class="list">
       <img ng-src="img/logo-test.png" class="logo">
       <div class="logo--text">
@@ -22,5 +22,5 @@
           Signup
       </button>
     </div>
-  </ion-content>
+  </div>
 </ion-view>
