--- a/www/css/style.css
+++ b/www/css/style.css
@@ -85,6 +85,7 @@ body {
  }
 
  #login--wrapper {
+  height: 100%;
    background-color: #91CC91;
  }
 
@@ -116,6 +117,7 @@ body {
  #user--email--input {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
+   border-bottom: 2px;
  }
 
  #user--password--input {
@@ -140,10 +142,10 @@ body {
  #sign--in {
    background-color: #fff;
    border: 2px solid #fff;
-   width: 100px;
+   width: 100%;
    color: #91CC91;
    border-radius: 5px;
-   margin: 20px auto;
+   margin: 20px auto 10px auto;
  }
 
  #sign--in:hover {
@@ -160,6 +162,7 @@ body {
    color: #fff;
    border-color: #fff;
    background-color: #91CC91;
+   padding: 10px 30px;
  }
 
  /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
@@ -168,6 +171,7 @@ body {
   * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 #signup--wrapper {
+  height: 100%;
   background-color: #91CC91;
 }
 
@@ -183,6 +187,7 @@ body {
 .signup--input {
   background-color: #91CC91;
   border: 2px solid #fff;
+  border-bottom: 0;
 }
 
 .top--input {
@@ -193,6 +198,12 @@ body {
 .bottom--input {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  border: 2px solid #FFF;
+}
+
+#signup--input--top {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .input--text {
@@ -217,7 +228,7 @@ body {
 #signup--user {
   background-color: #fff;
   border: 2px solid #fff;
-  width: 100px;
+  width: 100%;
   color: #91CC91;
   border-radius: 5px;
   margin: 20px auto;
