--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,20 +1,20 @@
-<ion-modal-view>
+<ion-modal-view id="signup--wrapper">
   <ion-header-bar class="bar bar-header">
     <h1 class="title" id="new--account--title">Create New Account</h1>
     <button class="button button-clear button-primary" ng-click="modal.hide()" id="new--account--cancel">Cancel</button>
   </ion-header-bar>
-  <ion-content class="padding" id="signup--wrapper">
+  <div class="padding">
     <div class="list" id="create--new--user">
-      <label class="item item-input signup--input top--input">
+      <label class="item item-input signup--input" id="signup--input--top">
         <input ng-model="user.email" placeholder="email" type="text" class="input--text" id="signup--email--input">
       </label>
       <label class="item item-input signup--input">
         <input ng-model="user.password" placeholder="password" type="password" class="input--text" id="signup--password--input">
       </label>
       <label class="item item-input signup--input bottom--input">
-        <input ng-model="user.displayname" placeholder="display name" type="text" class="input--text" id="signup--display--input">
+        <input ng-model="user.displayname" placeholder="display name" type="text" class="input--text bottom--input" id="signup--display--input">`
       </label>
       <button class="button button-full button-positive" ng-click="createUser(user)" id="signup--user">Create</button>
     </div>
-  </ion-content>
+  </div>
 </ion-modal-view>
