--- a/www/css/style.css
+++ b/www/css/style.css
@@ -446,6 +446,7 @@ margin-left: 20px;
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 .friend--lower {
+  position: relative;
   top: 90px;
 }
 
@@ -454,7 +455,18 @@ margin-left: 20px;
 }
 
 .friend-text {
-  color: white;
+  font-size: 18px;
+}
+
+.friend-profile {
+  float:right;
+  border: none;
+}
+
+.friend--activity {
+  color: #91CC91;
+  font-style: italic;
+  font-size: 12px;
 }
 
 .rightButton {
