Implement unblock functionality and minor style changes

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -463,6 +463,10 @@ margin-left: 20px;
   border: none;
 }
 
+.friend-header {
+  color: white;
+}
+
 .friend--activity {
   color: #91CC91;
   font-style: italic;
