--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,6 +1,6 @@
 <ion-nav-bar class="nav__bar">
   <ion-nav-title>
-    <h4 class="friend-text">Friends</h4>
+    <h4 class="friend-header">Friends</h4>
   </ion-nav-title>
 </ion-nav-bar>
 <ion-view view-title="Friends">
