--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,8 +2,10 @@
   <ion-nav-back-button id="back__button"
     ng-click="myGoBack()"> &nbsp; Filter
   </ion-nav-back-button>
-  <button ng-click='blockUser()' ng-hide='showUnblock'>Block User</button>
-  <button ng-click='unblockUser()' ng-show='showUnblock'>Unblock User</button>
+  <ion-nav-buttons side="right">
+    <button ng-click='blockUser()' ng-hide='showUnblock'>Block User</button>
+    <button ng-click='unblockUser()' ng-show='showUnblock'>Unblock User</button>
+  </ion-nav-buttons>
   <h4>Profile</h4>
 </ion-nav-bar>
 
