Revert "Fix unblock and friend style changes"

--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,28 +1,16 @@
-<ion-nav-bar class="nav__bar">
-  <ion-nav-title>
-    <h4 class="friend-header">Friends</h4>
-  </ion-nav-title>
-</ion-nav-bar>
 <ion-view view-title="Friends">
-  <label class="item item-input friend--filter--lower">
+  <label class="item item-input">
     <i class="icon ion-search placeholder-icon"></i>
     <input type="text" placeholder="Friend" ng-model="query">
   </label>
   <ion-content>
     <ion-list>
       <ion-item href="#/friends/friendrequests" ng-show="hasReq" class="friend--lower">View Friend Requests<div class="ion-alert rightButton"></div></ion-item>
-<!--       <ion-item ng-repeat="friend in friends | filter:query" href="#/profile/{{friend.id}}" class="item-remove-animate item-avatar item-icon-right friend--lower">
+      <ion-item ng-repeat="friend in friends | filter:query" href="#/profile/{{friend.id}}" class="item-remove-animate item-avatar item-icon-right friend--lower">
         <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
         <h2>{{friend.displayName}}</h2>
         <i class="icon ion-chevron-right icon-accessory" id="right--arrow--rooms"></i>
-      </ion-item> -->
-      <div ng-repeat="friend in friends | filter:query" class="card item-avatar friend--lower">
-        <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
-        <h1 class="friend-text">{{friend.displayName}}</h1>
-        <span class="friend--activity" ng-repeat='interest in friend.interests'>{{interest.activity}} &nbsp;</span>
-        <div class="item item-divider friend-profile" ui-sref="profile({userId:friend.id})">view profile</div>
-        <div class="item item-divider friend-profile" ui-sref="message({userId:friend.id})">chat me</div>
-      </div>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
