--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -22,6 +22,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Events" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/events">
+    <ion-nav-view name="tab-events"></ion-nav-view>
+  </ion-tab>
+
   <!-- Logout Button -->
   <ion-tab title="Logout" icon-off="ion-android-exit" icon-on="ion-android-exit" ng-controller="AuthenticationController as vm" ng-click="vm.logout()">
   </ion-tab>
