--- a/www/templates/tab-events.html
+++ b/www/templates/tab-events.html
@@ -1,4 +1,7 @@
 <ion-nav-bar class="nav__bar">
+  <ion-nav-buttons side="right">
+    <div class="ion-edit events--create" ui-sref="createEvent"></div>
+  </ion-nav-buttons>
 </ion-nav-bar>
 
 <ion-view>
