fixed chat, styling, and back button

--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -1,6 +1,6 @@
 <ion-nav-bar ng-controller="MyCtrl" class="nav__bar">
   <ion-nav-back-button id="back__button"
-    ng-click="myGoBack()"> &nbsp; Filter
+    ng-click="myGoBack()"> &nbsp; Back
   </ion-nav-back-button>
   <h4>Edit Profile</h4>
 </ion-nav-bar>
