--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,8 +1,7 @@
 <ion-nav-bar ng-controller="MyCtrl" class="nav__bar">
   <ion-nav-back-button id="back__button"
-    ng-click="myGoBack()"> &nbsp; Filter
+    ng-click="myGoBack()"> &nbsp; Back
   </ion-nav-back-button>
-  <h4>Profile</h4>
 </ion-nav-bar>
 
 <ion-view view-title="{{user.displayName}}">
