--- a/www/templates/tab-message.html
+++ b/www/templates/tab-message.html
@@ -1,7 +1,6 @@
-<ion-nav-bar view-title ng-controller="MyCtrl" class="nav__bar">
+<ion-nav-bar ng-controller="MyCtrl" class="nav__bar">
   <ion-nav-back-button id="back__button"
-    ng-click="myGoBack()"> &nbsp; {{user.displayName}}
-    <p class="my-title">ABC</p>
+    ng-click="myGoBack()"> &nbsp; Back
   </ion-nav-back-button>
 </ion-nav-bar>
 
@@ -15,9 +14,9 @@
   </ion-content>
   <div id="footer">
     <div class="item item-input" id="footer__bar">
-     <form name="search_form" ng-submit="sendMessage(text)" id="user__form">
+     <form name="search_form" ng-submit="sendMessage(text); text=''" id="user__form">
       <label class="item-input-wrapper" id="chat__input">
-        <div class="button--input--text button--camera">+</div>
+<!--         <div class="button--input--text button--camera">+</div> -->
         <input type="text" name="search_input" ng-model="text" id="user-message">
         <button class="button button--input">
           <p class="button--input--text">Send</p>
