refactor messages controller

--- a/www/templates/tab-message.html
+++ b/www/templates/tab-message.html
@@ -4,20 +4,20 @@
   </ion-nav-back-button>
 </ion-nav-bar>
 
-<ion-view view-title="Chat With {{user.displayName}}">
+<ion-view view-title="Chat With {{vm.user.displayName}}">
   <ion-content id="chat-content">
     <section id="user-room">
-      <div ng-repeat="message in messages track by $index" ng-class="setStyle(message.sender)">
+      <div ng-repeat="message in vm.messages track by $index" ng-class="vm.setStyle(message.sender)">
         <p>{{message.text}}</p>
-      </blockquote>
+      </div>
     </section>
   </ion-content>
   <div id="footer">
     <div class="item item-input" id="footer__bar">
-     <form name="search_form" ng-submit="sendMessage(text); text=''" id="user__form">
+     <form name="search_form" ng-submit="vm.sendMessage(vm.text);" id="user__form">
       <label class="item-input-wrapper" id="chat__input">
 <!--         <div class="button--input--text button--camera">+</div> -->
-        <input type="text" name="search_input" ng-model="text" id="user-message">
+        <input type="text" name="search_input" ng-model="vm.text" id="user-message">
         <button class="button button--input">
           <p class="button--input--text">Send</p>
         </button>
